<resources>
    <string name="app_name">Todo</string>
    <string name="float_button">Float button</string>
    <string name="add_new_task">Add New Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_content">Image_content</string>
    <string name="task_detail">task detail</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="due_date">Due Date</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="next_week">Next Week</string>
    <string name="text_field_error_message">Enter Something</string>
</resources>